--- a/back-end/package.json
+++ b/back-end/package.json
@@ -48,6 +48,8 @@
     "prettier"
   ],
   "dependencies": {
+    "@google-cloud/documentai": "^7.4.0",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -56,6 +58,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.0.0",
+    "google-auth-library": "^8.8.0",
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
